# marriage-platform

./: .gitignore  LICENSE  README.md  tree.txt
marriage_platform_backend/: .env.example  Cargo.toml
marriage_platform_backend/migrations/: 20240914124126_create_users_table.sql
marriage_platform_backend/src/: config.rs  error.rs  main.rs
marriage_platform_backend/src/auth/: jwt.rs
marriage_platform_backend/src/db/: user.rs
marriage_platform_backend/src/handlers/: user_handler.rs
marriage_platform_backend/src/services/: user_service.rs
marriage_platform_backend/src/tests/: user_service_tests.rs
marriage_platform_frontend/: Cargo.toml
